01-app-with-ingress/manifestos/service-app-dotnet.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dotnet-app
  name: dotnet-app-service
  namespace: dotnet-apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dotnet-app
status:
  loadBalancer: {}
