01-app-with-ingress/manifestos/service-app-java.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: java-app
  name: service-java-apps
  namespace: java-apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: java-app
status:
  loadBalancer: {}
