01-app-with-ingress/manifestos/ingress-app-dotnet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dotnet
  namespace: dotnet-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /dotnet
        pathType: Prefix # Exacly (a requisição tem que ser exatamente o definido no path)
        backend:
          service:
            name: dotnet-app-service
            port:
              number: 80
