01-app-with-ingress/manifestos/ingress-app-java.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-java
  namespace: java-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /java
        pathType: Prefix # Exacly (a requisição tem que ser exatamente o definido no path)
        backend:
          service:
            name: service-java-apps
            port:
              number: 80
